--- a/src/app/item-details/item-details.component.css
+++ b/src/app/item-details/item-details.component.css
@@ -113,3 +113,11 @@
     margin-top: 150px;
     color: #003c4d;
 }
+
+.underText {
+    text-align: center;
+}
+
+.diagramsHidden {
+    display: none;
+}
