--- a/src/app/action-items/action-items.component.html
+++ b/src/app/action-items/action-items.component.html
@@ -25,7 +25,7 @@
             <i class="fa fa-spinner fa-spin"></i>
         </div>
         <div class="tBody" *ngIf="!isLoadingActionItems">
-            <div id="t.id" [routerLink]="['/items']" [queryParams]="{ id: t.id }" routerLinkActive="router-link-active" class="flexTable row singleItem" role="rowgroup" *ngFor="let t of dataSource">
+            <div *ngFor="let t of dataSource" id="{{t.id}}" [routerLink]="['/items']" [queryParams]="{ id: t.id }" routerLinkActive="router-link-active" class="flexTable row singleItem" role="rowgroup">
                 <div class="flexRow bodyCell first" role="cell">
                     <div class="titleContainer" id="circleContainer">
                         <i class="fa fa-circle" [ngClass]="(t | daysLeftCounted)| circleColor"></i>
