--- a/src/app/action-items/action-items.component.html
+++ b/src/app/action-items/action-items.component.html
@@ -25,10 +25,10 @@
             <i class="fa fa-spinner fa-spin"></i>
         </div>
         <div class="tBody" *ngIf="!isLoadingActionItems">
-            <div *ngFor="let t of dataSource" id="{{t.id}}" [routerLink]="['/items']" [queryParams]="{ id: t.id }" routerLinkActive="router-link-active" class="flexTable row singleItem" role="rowgroup">
+            <div *ngFor="let t of dataSource" id="{{ t.id }}" [routerLink]="['/items']" [queryParams]="{ id: t.id }" routerLinkActive="router-link-active" class="flexTable row singleItem" role="rowgroup">
                 <div class="flexRow bodyCell first" role="cell">
                     <div class="titleContainer" id="circleContainer">
-                        <i class="fa fa-circle" [ngClass]="(t | daysLeftCounted)| circleColor"></i>
+                        <i class="fa fa-circle" [ngClass]="t | daysLeftCounted | circleColor"></i>
                     </div>
                     <div class="titleContainer">
                         <p class="actionItemName title">{{ t.title }}</p>
@@ -39,7 +39,7 @@
                 <div class="flexRow bodyCell inner" role="cell">{{ t.completed }}%</div>
                 <div class="flexRow bodyCell inner" role="cell">{{ (t.dueDate | date: 'MM/dd/yyyy') || '-' }}</div>
                 <div class="flexRow bodyCell inner" role="cell">
-                    {{ t | daysLeftCounted}}
+                    {{ t | daysLeftCounted }}
                 </div>
                 <div class="flexRow bodyCell inner" role="cell">
                     <a><i class="fa fa-edit"></i></a>
