--- a/src/app/item-details/item-details.component.html
+++ b/src/app/item-details/item-details.component.html
@@ -28,7 +28,7 @@
                 <div>Due Date: {{ (item.dueDate | date: 'MM/dd/yyyy') || '-' }}</div>
             </div>
             <div class="circularDiagrams">
-                <div class="diagram positionRelative" [class.diagramsHidden]="!itemVisibility">
+                <div class="diagram positionRelative" [class.diagramsHidden]="!daysLeftVisibility">
                     <div class="detail">
                         <round-progress [current]="60" [max]="60" [background]="'#eaeaea'" [radius]="35" [color]="'#AE1919'" [stroke]="2">30</round-progress>
                         <div class="diagramValue daysLeft">
