"confirmation dialog modal"

--- a/src/app/add-item/add-item.component.css
+++ b/src/app/add-item/add-item.component.css
@@ -50,6 +50,7 @@
         border-radius: 1px;
         font-size: 10px;
         margin: 2px;
+        cursor: pointer;
     }
     
     .matRaisedButton:hover:enabled {
