"action items deletion"

--- a/src/app/item-details/item-details.component.html
+++ b/src/app/item-details/item-details.component.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="top ">
                     <div class="detailIcon"><i class="fa fa-edit"></i></div>
-                    <div (click)="openConfirmationDialog()" mat-button class="detailIcon confirmationDialog"><i class="fa fa-check"></i></div>
+                    <div (click)="openConfirmationDialog()" class="detailIcon confirmationDialog"><i class="fa fa-check"></i></div>
                 </div>
             </div>
             <div class="detail projectName">
