--- a/src/app/confirmationDialog/confirmation-dialog/confirmation-dialog.component.html
+++ b/src/app/confirmationDialog/confirmation-dialog/confirmation-dialog.component.html
@@ -3,7 +3,7 @@
         Do you confirm the deletion of this Action Item?
     </div>
     <div mat-dialog-actions class="buttons">
-        <button class="dialogButton" mat-button (click)="onNoClick()">No</button>
+        <button class="dialogButton onNoClick" mat-button (click)="onNoClick()">No</button>
         <button class="dialogButton" mat-button [mat-dialog-close]="true">Yes</button>
     </div>
 </div>
