editing action items

--- a/src/app/item-details/item-details.component.html
+++ b/src/app/item-details/item-details.component.html
@@ -15,7 +15,7 @@
                     <div class="itemTitle">{{ item.title }}</div>
                 </div>
                 <div class="top ">
-                    <div class="detailIcon"><i class="fa fa-edit"></i></div>
+                    <div (click)="openEditDialog()" class="detailIcon editDialog"><i class="fa fa-edit"></i></div>
                     <div (click)="openConfirmationDialog()" class="detailIcon confirmationDialog"><i class="fa fa-check"></i></div>
                 </div>
             </div>
