--- a/src/app/action-items/action-items.component.html
+++ b/src/app/action-items/action-items.component.html
@@ -48,7 +48,7 @@
         </div>
     </div>
     <div class="innerContainer detailsContainer ">
-        <app-item-details [id]="actionItemId" [item]="actionItem" [isLoadingActionItem]="isLoadingActionItem" [errorMessage]="errorMessage" (refreshView)="refreshView($event)">
+        <app-item-details [id]="actionItemId" [item]="actionItem" [isLoadingActionItem]="isLoadingActionItem" [errorMessage]="errorMessage" (refreshViewAfterDeletion)="refreshViewAfterDeletion($event)" (refreshViewAfterEditing)="refreshViewAfterEditing($event)">
         </app-item-details>
     </div>
 </div>
