"editing action items"

--- a/src/app/item-details/item-details.component.html
+++ b/src/app/item-details/item-details.component.html
@@ -32,7 +32,7 @@
                     <div class="detail">
                         <round-progress [current]="60" [max]="60" [background]="'#eaeaea'" [radius]="35" [color]="'#AE1919'" [stroke]="2">30</round-progress>
                         <div class="diagramValue daysLeft">
-                            {{ item | daysLeftCounted }}
+                            {{ item.dueDate | daysLeftCounted }}
                         </div>
                         <div class="underText">Days Left</div>
                     </div>
