--- a/src/app/action-items/action-items.component.html
+++ b/src/app/action-items/action-items.component.html
@@ -28,7 +28,7 @@
             <div #item *ngFor="let actionItem of dataSource" id="{{ actionItem.id }}" [routerLink]="['/items']" [queryParams]="{ id: actionItem.id }" routerLinkActive="router-link-active" class="flexTable row singleItem" role="rowgroup">
                 <div class="flexRow bodyCell first" role="cell">
                     <div class="titleContainer" id="circleContainer">
-                        <i class="fa fa-circle" [ngClass]="actionItem | daysLeftCounted | circleColor"></i>
+                        <i class="fa fa-circle" [ngClass]="actionItem.dueDate | daysLeftCounted | circleColor"></i>
                     </div>
                     <div class="titleContainer">
                         <p class="actionItemName title">{{ actionItem.title }}</p>
@@ -39,7 +39,7 @@
                 <div class="flexRow bodyCell inner" role="cell">{{ actionItem.completed }}%</div>
                 <div class="flexRow bodyCell inner" role="cell">{{ (actionItem.dueDate | date: 'MM/dd/yyyy') || '-' }}</div>
                 <div class="flexRow bodyCell inner" role="cell">
-                    {{ actionItem | daysLeftCounted }}
+                    {{ actionItem.dueDate | daysLeftCounted }}
                 </div>
                 <div class="flexRow bodyCell inner" role="cell">
                     <a><i class="fa fa-edit"></i></a>
