--- a/src/app/add-item/add-item.component.html
+++ b/src/app/add-item/add-item.component.html
@@ -1,8 +1,8 @@
 <div class="container dialogModal">
-    <h2 class="dialogTitle" mat-dialog-title>{{ title }}</h2>
+    <h2 class="dialogTitle" mat-dialog-title>{{ dialogTitle }}</h2>
     <mat-dialog-content [formGroup]="dialogForm">
         <mat-form-field>
-            <input matInput class="typedValueColor nameInput" placeholder="Action Item Name" formControlName="name" />
+            <input matInput class="typedValueColor nameInput" placeholder="Action Item Name" formControlName="name" [(ngModel)]="title" />
             <mat-error class="invalidFeedback nameError">
                 Name is required.
             </mat-error>
@@ -27,7 +27,12 @@
         </mat-form-field>
     </mat-dialog-content>
 </div>
-<mat-dialog-actions class="buttons">
+<mat-dialog-actions class="buttons" *ngIf="!title">
     <button class="matRaisedButton close" type="button" mat-button mat-dialog-close>Close</button>
     <button class="matRaisedButton create" [disabled]="dialogForm.invalid" (click)="createActionItem()">Create<span class="faButton" *ngIf="isCreatingActionItem"><i class="fa fa-spinner fa-spin"></i></span></button>
+</mat-dialog-actions>
+
+<mat-dialog-actions class="buttons" *ngIf="title">
+    <button class="matRaisedButton close" type="button" mat-button mat-dialog-close>Close</button>
+    <button class="matRaisedButton create" (click)="editItem()">Edit</button>
 </mat-dialog-actions>
