"reusable dialog for creating&editing action items"

--- a/src/app/add-item/add-item.component.html
+++ b/src/app/add-item/add-item.component.html
@@ -1,5 +1,6 @@
 <div class="container dialogModal">
-    <h2 class="dialogTitle" mat-dialog-title>{{ dialogTitle }}</h2>
+    <h2 *ngIf="createDialog" class="dialogTitle" mat-dialog-title>{{ dialogTitleForAddingItems }}</h2>
+    <h2 *ngIf="!createDialog" class="dialogTitle" mat-dialog-title>{{ dialogTitleForEditingItems }}</h2>
     <mat-dialog-content [formGroup]="dialogForm">
         <mat-form-field>
             <input matInput class="typedValueColor nameInput" placeholder="Action Item Name" formControlName="name" [(ngModel)]="title" />
@@ -27,12 +28,12 @@
         </mat-form-field>
     </mat-dialog-content>
 </div>
-<mat-dialog-actions class="buttons" *ngIf="!title">
+<mat-dialog-actions class="buttons" *ngIf="createDialog">
     <button class="matRaisedButton close" type="button" mat-button mat-dialog-close>Close</button>
     <button class="matRaisedButton create" [disabled]="dialogForm.invalid" (click)="createActionItem()">Create<span class="faButton" *ngIf="isCreatingActionItem"><i class="fa fa-spinner fa-spin"></i></span></button>
 </mat-dialog-actions>
 
-<mat-dialog-actions class="buttons" *ngIf="title">
+<mat-dialog-actions class="buttons" *ngIf="!createDialog">
     <button class="matRaisedButton close" type="button" mat-button mat-dialog-close>Close</button>
     <button class="matRaisedButton create" (click)="editItem()">Edit</button>
 </mat-dialog-actions>
