"reusable dialog for creating&editing action items"

--- a/src/app/add-item/add-item.component.css
+++ b/src/app/add-item/add-item.component.css
@@ -2,6 +2,7 @@
         font-size: 14px;
         font-weight: normal;
         color: #979797;
+        outline: none;
     }
     
     mat-form-field {
