--- a/src/app/add-item/add-item.component.html
+++ b/src/app/add-item/add-item.component.html
@@ -1,15 +1,16 @@
 <div class="container dialogModal">
-    <h2 *ngIf="createDialog" class="dialogTitle" mat-dialog-title>{{ dialogTitleForAddingItems }}</h2>
-    <h2 *ngIf="!createDialog" class="dialogTitle" mat-dialog-title>{{ dialogTitleForEditingItems }}</h2>
+    <h2 class="dialogTitle" mat-dialog-title>{{ dialogTitle }}</h2>
     <mat-dialog-content [formGroup]="dialogForm">
         <mat-form-field>
-            <input matInput class="typedValueColor nameInput" placeholder="Action Item Name" formControlName="name" />
+            <input matInput class="typedValueColor nameInput" placeholder="Action Item Name" formControlName="title" />
             <mat-error class="invalidFeedback nameError">
                 Name is required.
             </mat-error>
         </mat-form-field>
         <mat-form-field>
-            <mat-select class="projectInput" formControlName="project" placeholder="Project">
+            <mat-icon matSuffix *ngIf="loaderVisible" class="projectsLoader"><i class="fa fa-circle-o-notch fa-spin"></i>
+            </mat-icon>
+            <mat-select class="projectInput" formControlName="projectName" placeholder="Project">
                 <mat-option *ngFor="let project of projects" [value]="project.name">
                     {{ project.name }}
                 </mat-option>
@@ -28,12 +29,10 @@
         </mat-form-field>
     </mat-dialog-content>
 </div>
-<mat-dialog-actions class="buttons" *ngIf="createDialog">
+<mat-dialog-actions class="buttons">
     <button class="matRaisedButton close" type="button" mat-button mat-dialog-close>Close</button>
-    <button class="matRaisedButton create" [disabled]="dialogForm.invalid" (click)="createActionItem()">Create<span class="faButton" *ngIf="isCreatingActionItem"><i class="fa fa-spinner fa-spin"></i></span></button>
-</mat-dialog-actions>
-
-<mat-dialog-actions class="buttons" *ngIf="!createDialog">
-    <button class="matRaisedButton close" type="button" mat-button mat-dialog-close>Close</button>
-    <button class="matRaisedButton create" [disabled]="projects === undefined || dialogForm.invalid" (click)="editItem()">Edit<span class="faButton" *ngIf="isEditingActionItem"><i class="fa fa-spinner fa-spin"></i></span></button>
+    <button class="matRaisedButton create" [disabled]="dialogForm.invalid" (click)="saveForm()">
+    {{ dialogActionButton
+    }}<span class="faButton" *ngIf="isSavingDialogData"><i class="fa fa-spinner fa-spin"></i></span>
+  </button>
 </mat-dialog-actions>
