--- a/src/app/action-items/action-items.component.html
+++ b/src/app/action-items/action-items.component.html
@@ -25,6 +25,10 @@
             <i class="fa fa-spinner fa-spin"></i>
         </div>
         <div class="tBody" *ngIf="!isLoadingActionItems">
+            <div *ngIf="showImageWhenNoItem" class="emptyListOfItem">
+                <img class="noItem" src="/assets/empty-inbox.svg">
+                <p class="listEmpty noItem">The list of Action Items is empty.</p>
+            </div>
             <div #item *ngFor="let actionItem of dataSource" id="{{ actionItem.id }}" [routerLink]="['/items']" [queryParams]="{ id: actionItem.id }" routerLinkActive="router-link-active" class="flexTable row singleItem" role="rowgroup">
                 <div class="flexRow bodyCell first" role="cell">
                     <div class="titleContainer" id="circleContainer">
@@ -48,7 +52,8 @@
         </div>
     </div>
     <div class="innerContainer detailsContainer ">
-        <app-item-details [id]="actionItemId" [item]="actionItem" [isLoadingActionItem]="isLoadingActionItem" [errorMessage]="errorMessage" (refreshViewAfterDeletion)="refreshViewAfterDeletion($event)" (refreshViewAfterEditing)="refreshViewAfterEditing($event)">
+        <app-item-details [showImageWhenNoItem]="showImageWhenNoItem" [id]="actionItemId" [item]="actionItem" [isLoadingActionItem]="isLoadingActionItem" [errorMessage]="errorMessage" [dialogData]="dialogData" (refreshViewAfterDeletion)="refreshViewAfterDeletion($event)"
+            (refreshViewAfterEditing)="refreshViewAfterEditing($event)">
         </app-item-details>
     </div>
 </div>
