--- a/src/app/add-item/add-item.component.css
+++ b/src/app/add-item/add-item.component.css
@@ -67,3 +67,13 @@
         margin: 1px 2px;
         padding: 1px 2px;
     }
+    
+    .projectsLoader {
+        padding-bottom: 5px;
+        padding-left: 5px;
+    }
+    
+    .projectsLoader .fa-circle-o-notch {
+        font-size: 15px;
+        color: #979797;
+    }
