--- a/src/app/item-details/item-details.component.css
+++ b/src/app/item-details/item-details.component.css
@@ -44,8 +44,8 @@
     margin-top: 30px;
 }
 
-.fa-edit,
-.fa-check {
+.details .top .fa-edit,
+.details .top .fa-check {
     padding: 5px;
     margin: 0 5px;
     border-radius: 50%;
@@ -120,10 +120,6 @@
 
 .underText {
     text-align: center;
-}
-
-.diagramsHidden {
-    display: none;
 }
 
 .confirmationDialog,
