--- a/src/app/item-details/item-details.component.html
+++ b/src/app/item-details/item-details.component.html
@@ -1,11 +1,14 @@
 <div *ngIf="isLoadingActionItem" class="spinner">
     <i class="fa fa-spinner fa-spin"></i>
 </div>
-<div *ngIf="item === undefined && errorMessage && !isLoadingActionItem" class="selectItem errorMessage">
+<div *ngIf="item === undefined && errorMessage && !isLoadingActionItem && !showImageWhenNoItem" class="selectItem errorMessage">
     <p>{{ errorMessage }}</p>
 </div>
-<div *ngIf="item === undefined && !errorMessage && !isLoadingActionItem" class="selectItem viewDetails">
+<div *ngIf="item === undefined && !errorMessage && !isLoadingActionItem && !showImageWhenNoItem" class="selectItem viewDetails">
     <p>Select an Action Item to view details.<i class="fa fa-mouse-pointer"></i></p>
+</div>
+<div *ngIf="item === undefined && !errorMessage && !isLoadingActionItem || showImageWhenNoItem && !isLoadingActionItem" class="selectItem viewDetails">
+    <p>Add an Action Item to the list.<i class="fa fa-mouse-pointer"></i></p>
 </div>
 <div class="details-container" *ngIf="!isLoadingActionItem && item !== undefined">
     <div class="details" *ngIf="item">
@@ -14,9 +17,11 @@
                 <div class="top title">
                     <div class="itemTitle">{{ item.title }}</div>
                 </div>
-                <div class="top ">
+                <div class="top">
                     <div (click)="openEditDialog()" class="detailIcon editDialog"><i class="fa fa-edit"></i></div>
-                    <div (click)="openConfirmationDialog()" class="detailIcon confirmationDialog"><i class="fa fa-check"></i></div>
+                    <div (click)="openConfirmationDialog()" class="detailIcon confirmationDialog">
+                        <i class="fa fa-check"></i>
+                    </div>
                 </div>
             </div>
             <div class="detail projectName">
@@ -28,7 +33,7 @@
                 <div>Due Date: {{ (item.dueDate | date: 'MM/dd/yyyy') || '-' }}</div>
             </div>
             <div class="circularDiagrams">
-                <div class="diagram positionRelative" [class.diagramsHidden]="!daysLeftVisibility">
+                <div class="diagram positionRelative" *ngIf="daysLeftVisibility">
                     <div class="detail">
                         <round-progress [current]="60" [max]="60" [background]="'#eaeaea'" [radius]="35" [color]="'#AE1919'" [stroke]="2">30</round-progress>
                         <div class="diagramValue daysLeft">
