no arrow on mat-select when spinner is visible

--- a/src/app/add-item/add-item.component.css
+++ b/src/app/add-item/add-item.component.css
@@ -77,3 +77,7 @@
         font-size: 15px;
         color: #979797;
     }
+    
+     ::ng-deep .loader .mat-select-arrow-wrapper {
+        display: none;
+    }
