--- a/src/app/item-details/item-details.component.html
+++ b/src/app/item-details/item-details.component.html
@@ -1,18 +1,18 @@
 <div *ngIf="isLoadingActionItem" class="spinner">
     <i class="fa fa-spinner fa-spin"></i>
 </div>
-<div *ngIf="item === undefined && errorMessage && !isLoadingActionItem !showImageWhenNoItem" class="selectItem errorMessage">
+<div *ngIf="actionItem === undefined && errorMessage && !isLoadingActionItem !showImageWhenNoActionItem" class="selectItem errorMessage">
     <p>{{ errorMessage }}</p>
 </div>
-<div *ngIf="item === undefined && !errorMessage && !isLoadingActionItem" class="selectItem viewDetails">
+<div *ngIf="actionItem === undefined && !errorMessage && !isLoadingActionItem" class="selectItem viewDetails">
     <p>Select an Action Item to view details.<i class="fa fa-mouse-pointer"></i></p>
 </div>
-<div class="details-container" *ngIf="!isLoadingActionItem && item !== undefined">
-    <div class="details" *ngIf="item">
+<div class="details-container" *ngIf="!isLoadingActionItem && actionItem !== undefined">
+    <div class="details" *ngIf="actionItem">
         <div class="detailsTop">
             <div class="detail title">
                 <div class="top title">
-                    <div class="itemTitle">{{ item.title }}</div>
+                    <div class="itemTitle">{{ actionItem.title }}</div>
                 </div>
                 <div class="top">
                     <div (click)="openEditDialog()" class="detailIcon editDialog"><i class="fa fa-edit"></i></div>
@@ -22,28 +22,28 @@
                 </div>
             </div>
             <div class="detail projectName">
-                <div>{{ item.projectName }}</div>
+                <div>{{ actionItem.projectName }}</div>
             </div>
         </div>
         <div class="center">
             <div class="detail dueDate">
-                <div>Due Date: {{ (item.dueDate | date: 'MM/dd/yyyy') || '-' }}</div>
+                <div>Due Date: {{ (actionItem.dueDate | date: 'MM/dd/yyyy') || '-' }}</div>
             </div>
             <div class="circularDiagrams">
                 <div class="diagram positionRelative" *ngIf="daysLeftVisibility">
                     <div class="detail">
                         <round-progress [current]="60" [max]="60" [background]="'#eaeaea'" [radius]="35" [color]="'#AE1919'" [stroke]="2">30</round-progress>
                         <div class="diagramValue daysLeft">
-                            {{ item.dueDate | daysLeftCounted }}
+                            {{ actionItem.dueDate | daysLeftCounted }}
                         </div>
                         <div class="underText">Days Left</div>
                     </div>
                 </div>
                 <div class="diagram positionRelative">
                     <div class="detail ">
-                        <round-progress [current]="item.completed" [max]="100" [background]="'#eaeaea'" [radius]="35" [color]="'#69A3B9'" [stroke]="2">30</round-progress>
+                        <round-progress [current]="actionItem.completed" [max]="100" [background]="'#eaeaea'" [radius]="35" [color]="'#69A3B9'" [stroke]="2">30</round-progress>
                         <div class="diagramValue complete ">
-                            {{ item.completed }}
+                            {{ actionItem.completed }}
                         </div>
                         <div class="underText">% Complete</div>
                     </div>
