--- a/src/app/item-details/item-details.component.html
+++ b/src/app/item-details/item-details.component.html
@@ -50,5 +50,8 @@
                 </div>
             </div>
         </div>
+        <div class="detail description" *ngIf="actionItem.description">
+            <div>Description: {{ actionItem.description }}</div>
+        </div>
     </div>
 </div>
