create/edit dialog, local storage fixes

--- a/src/app/action-items/action-items.component.html
+++ b/src/app/action-items/action-items.component.html
@@ -8,7 +8,7 @@
                 <button class="filter assigned">Assigned to me X</button>
             </div>
             <div class="newItemButton">
-                <button class="addItem" (click)="openDialog()">+ create action item</button>
+                <button class="addItem" (click)="openCreateDialog()">+ create action item</button>
             </div>
         </div>
         <div class="tHead">
