dialog mode enum

--- a/src/app/action-items/action-items.component.html
+++ b/src/app/action-items/action-items.component.html
@@ -52,7 +52,7 @@
         </div>
     </div>
     <div class="innerContainer detailsContainer">
-        <app-item-details [showImageWhenNoActionItem]="showImageWhenNoActionItem" [dialogModeEnum]="dialogModeEnum" [actionItem]="actionItem" [isLoadingActionItem]="isLoadingActionItem" [errorMessage]="errorMessage" [dialogData]="dialogData" (refreshViewAfterDeletion)="refreshViewAfterDeletion($event)"
+        <app-item-details [showImageWhenNoActionItem]="showImageWhenNoActionItem" [actionItem]="actionItem" [isLoadingActionItem]="isLoadingActionItem" [errorMessage]="errorMessage" [dialogData]="dialogData" (refreshViewAfterDeletion)="refreshViewAfterDeletion($event)"
             (refreshViewAfterEditing)="refreshViewAfterEditing($event)">
         </app-item-details>
     </div>
